--- a/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/src/main/less/tree.less
+++ b/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/src/main/less/tree.less
@@ -19,10 +19,14 @@
 @image-path: "$!services.webjars.url('org.xwiki.platform:xwiki-platform-tree-webjar', '')";
 @base-height: 40px;
 
-@import "jstree/mixins.less";
-@import "jstree/base.less";
-@import "jstree/main.less";
-
+// We use FontAwesome for the open/close/leaf icons.
+@font-face {
+  font-family: 'FontAwesome';
+  src: url("$!services.webjars.url('font-awesome', 'fonts/fontawesome-webfont.eot')");
+  src: url("$!services.webjars.url('font-awesome', 'fonts/fontawesome-webfont.eot')#iefix") format('embedded-opentype'), url("$!services.webjars.url('font-awesome', 'fonts/fontawesome-webfont.woff')") format('woff'), url("$!services.webjars.url('font-awesome', 'fonts/fontawesome-webfont.ttf')") format('truetype'), url("$!services.webjars.url('font-awesome', 'fonts/fontawesome-webfont.svg')#fontawesomeregular") format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 .fontAwesome() {
   color: $theme.textSecondaryColor;
   display: inline-block;
@@ -37,6 +41,10 @@
   -moz-font-feature-settings: normal;
   -moz-font-language-override: normal;
 }
+
+@import "jstree/mixins.less";
+@import "jstree/base.less";
+@import "jstree/main.less";
 
 /**
  * Narrow Tree (no icons and no edges)
