XWIKI-11635: Display an error when an extension is not compatible and information how to find a compatible version - Install log is also collapsed by default when trying to install an incompatible extension - Also fixed the casing of the Stable Versions label.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extension.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extension.vm
@@ -467,7 +467,25 @@ $namespace##
   #if ($isExtensionPlan)
     #displayExtensionPlan($jobStatus)
   #else
-    #displayJobStatusLog($jobStatus)
+    ## Display any incompatibility errors
+    #set ($jobStatusCollapsed = false)
+    #if ($jobStatus.state == 'FINISHED')
+      ## Check if there are any logged errors.
+      #foreach ($log in $jobStatus.log)
+        #if ($log.level.name() == 'ERROR' && $log.throwable)
+          #set ($message = "#getThrowableRootCauseMessage($log.throwable)")
+          #if ($message.contains('not compatible'))
+            #set ($jobStatusCollapsed = true)
+            #set ($errorMessage = $services.localization.render('platform.extension.info.error.versionNotCompatible'))
+            #set ($errorMessage = "${errorMessage}<br/>")
+            #set ($errorMessage = "${errorMessage}${services.localization.render('platform.extension.info.error.versionNotCompatibleHint')}")
+            <p>#error($errorMessage)</p>
+            #break
+          #end
+        #end
+      #end
+    #end
+    #displayJobStatusLog($jobStatus, $jobStatusCollapsed)
   #end
 #end
 
