--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/job_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/job_macros.vm
@@ -24,11 +24,11 @@ $services.template.execute('logging_macros.vm')
   </div>
 #end
 
-#macro (displayJobStatusLog $status)
+#macro (displayJobStatusLog $status $collapsed)
   <dl class="xform">
     ## Collapse the job log if the job is waiting for user input (leave more space for the job question).
     <dt>
-      <label class="collapsible#if ($status.state == 'WAITING') collapsed#end">
+      <label class="collapsible#if ($collapsed || $status.state == 'WAITING') collapsed#end">
         #set ($jobType = $status.request.getProperty('job.type'))
         #set ($translationKey = "job.log.label.$jobType")
         #if (!$services.localization.get($translationKey))
