XWIKI-11635: Display an error when an extension is not compatible and information how to find a compatible version - Fixed typo - Minor refactoring on handling error logs. Still not perfect since the 'not compatible' string check is not reliable on the long term (once it starts being translated).

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extension.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extension.vm
@@ -471,17 +471,14 @@ $namespace##
     #set ($jobStatusCollapsed = false)
     #if ($jobStatus.state == 'FINISHED')
       ## Check if there are any logged errors.
-      #foreach ($log in $jobStatus.log)
-        #if ($log.level.name() == 'ERROR' && $log.throwable)
-          #set ($message = "#getThrowableRootCauseMessage($log.throwable)")
-          #if ($message.contains('not compatible'))
-            #set ($jobStatusCollapsed = true)
-            #set ($errorMessage = $services.localization.render('platform.extension.info.error.versionNotCompatible'))
-            #set ($errorMessage = "${errorMessage}<br/>")
-            #set ($errorMessage = "${errorMessage}${services.localization.render('platform.extension.info.error.versionNotCompatibleHint')}")
-            <p>#error($errorMessage)</p>
-            #break
-          #end
+      #foreach ($log in $jobStatus.log.getLogs('ERROR'))
+        #if ($log.throwable && $exceptiontool.getRootCauseMessage($log.throwable).contains('not compatible'))
+          #set ($jobStatusCollapsed = true)
+          #set ($errorMessage = $services.localization.render('platform.extension.info.error.versionNotCompatible'))
+          #set ($errorMessage = "${errorMessage}<br/>")
+          #set ($errorMessage = "${errorMessage}${services.localization.render('platform.extension.info.error.versionNotCompatibleHint')}")
+          <p>#error($errorMessage)</p>
+          #break
         #end
       #end
     #end
