XWIKI-11601: Very long no-space text (like URL) in comment overflow on small screen.
(cherry picked from commit 3a5b8c962e057527f2c0dd6847965194cc72810c)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
@@ -58,7 +58,7 @@
 // Comments ==================================================================
 
 .commentcontent {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 // Messages ===================================================================
