--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/livetable.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/livetable.less
@@ -3,6 +3,8 @@
 // 
 // Some adaptations to make the livetable responsive to the screen size
 // --------------------------------------------------
+@import "tables";
+
 // Looks nicer with the .table-striped() mix-in of bootstrap
 .xwiki-livetable-display {
   .table;
