--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/javascript.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/javascript.vm
@@ -91,7 +91,7 @@ $xwiki.jsfx.use("flamingo$jsExtension", {'forceSkinAction' : true, 'language' : 
 ## Note that velocity takes argument references by name (see: https://velocity.apache.org/engine/releases/velocity-1.5/user-guide.html#velocimacros).
 ## So we set the value of the $expr in the $url variable to not execute $expr multiple times.
 #set ($url = $expr)
-#if (!$url.contains('?'))$stringtool.removeEnd($url, '.js'))#else$url#{end}
+#if (!$url.contains('?'))$stringtool.removeEnd($url, '.js')#else$url#{end}
 #end
 ##
 ## Start the requirejs config.
