--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/javascript.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/javascript.vm
@@ -84,7 +84,7 @@ $xwiki.jsfx.use('js/scriptaculous/effects.js', true)##
 ## Note that velocity takes argument references by name (see: https://velocity.apache.org/engine/releases/velocity-1.5/user-guide.html#velocimacros).
 ## So we set the value of the $expr in the $url variable to not execute $expr multiple times.
 #set ($url = $expr)
-#if (!$url.contains('?'))$stringtool.removeEnd($url, '.js'))#else$url#{end}
+#if (!$url.contains('?'))$stringtool.removeEnd($url, '.js')#else$url#{end}
 #end
 ##
 ## Start the requirejs config.
