XWIKI-11658: Glyphicons are not displayed in HTML exported files. XWIKI-11497: Missing icons after HTML export.
* Introduce LESSContext to disable the LESS cache mechanism during HTML exports.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
@@ -10,6 +10,7 @@
 ##
 ##############################################
 #set($doNotLoadColorThemeFromCSS = true)
+#set($themeObj = '')
 #template('colorThemeInit.vm')
 #if ("$!themeObj" != '')
   #initFromOldColorTheme()
