XWIKI-11670: Variables categories disappear when we navigate through them.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/javascript.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/javascript.vm
@@ -133,7 +133,7 @@ if (Prototype.BrowserFeatures.ElementExtensions) {
           $(window).on(method + '.bs.' + plugin, handler); 
       });
     },
-    pluginsToDisable = ['collapse', 'dropdown', 'modal', 'tooltip'];
+    pluginsToDisable = ['collapse', 'dropdown', 'modal', 'tooltip', 'tab'];
     disablePrototypeJS('show', pluginsToDisable);
     disablePrototypeJS('hide', pluginsToDisable);
   });
