XWIKI-11675: Still some incompatibilities between Bootstrap and PrototypeJs.
* Fix the popover bug.

(cherry picked from commit 40659372e1c316a543f519118a5837384492103a)

Conflicts:
	xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/javascript.vm

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/javascript.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/javascript.vm
@@ -132,7 +132,7 @@ if (Prototype.BrowserFeatures.ElementExtensions) {
           $(window).on(method + '.bs.' + plugin, handler); 
       });
     },
-    pluginsToDisable = ['collapse', 'dropdown', 'modal', 'tooltip'];
+    pluginsToDisable = ['collapse', 'dropdown', 'modal', 'tooltip', 'popover'];
     disablePrototypeJS('show', pluginsToDisable);
     disablePrototypeJS('hide', pluginsToDisable);
   });
