XWIKI-9971: Disable extracting title from document content by default

--- a/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.cfg.vm
+++ b/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.cfg.vm
@@ -559,7 +559,8 @@ xwiki.defaultskin=$xwikiCfgDefaultSkin
 xwiki.defaultbaseskin=$!xwikiCfgDefaultBaseSkin
 
 #-# Defines whether title handling should be using the compatibility mode or not. When the compatibility
-#-# mode is active, if the document's content first header (level 1 or level 2) matches the document's title
+#-# mode is active, XWiki will try to extract a title from the document content.
+#-# If the document's content first header (level 1 or level 2) matches the document's title
 #-# the first header is stripped.
 #-# The default value is 0.
 # xwiki.title.compatibility=1
