XWIKI-11679: Expose @headings-color in the flamingo theme editor.
(cherry picked from commit 82e640e784968a94022abcaa6ef6c954f9261d2a)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
@@ -123,6 +123,7 @@
       "brand-info": "color",
       "brand-warning": "color",
       "brand-danger": "color",
+      "headings-color": "color",
       "component-active-color" : "color",
       "component-active-bg" : "color",
       "font-family-base": "text",
