--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
@@ -125,6 +125,7 @@
       "brand-info": "color",
       "brand-warning": "color",
       "brand-danger": "color",
+      "headings-color": "color",
       "component-active-color" : "color",
       "component-active-bg" : "color",
       "font-family-base": "text",
