XWIKI-11736: Use the new tree on the WYSIWYG Editor's link creation wizards * Add support for displaying 'New document...' and 'Upload file...' meta nodes in the document tree (needed by the WYSIWYG editor). * Look only for default translations when suggesting documents (for the tree finder). * Take suggestion data (e.g. resultHint, resultInfo) from node.data (rather than node directly) * Add support to the suggest.js for specifying the type of each suggestion (used as a CSS class). * Display 'No results!' when the tree finder has no suggestions. * Scroll into view the node that corresponds to the selected suggestion. * Remove SmartClient files and xwikiexplorer.js and update all the places where they were used. * Enhance entityReference.js with a method to get an EntityType contant (enum value) by it's name. XWIKI-5484: Problem to load the wiki pages tree/list (Link > Wiki page > "All the pages" tab) where there is a lot of pages XWIKI-3796: No horizontal scrollbar for long page names in the treeview XWIKI-11550: Document Tree macro doesn't properly work when using the "openTo" parameter and setting Hidden Docs to True * Return the full node information when retrieving the path (rather than just the node id). * When performing pagination, add the new nodes only if they don't exist already. * Enhance openTo() to load the missing parent nodes (e.g. when they are 'hidden' by the pagination). * Call the openTo() callback even if the path cannot be fully opened (some nodes don't exist).

--- a/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/src/main/less/finder.less
+++ b/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-webjar/src/main/less/finder.less
@@ -20,10 +20,13 @@ div.suggestItems.xtree-finder-suggestions {
   margin: 2px 0 0;
   padding: 5px 0;
 
-  .suggestItem {
+  .suggestItem, .noSuggestion {
+    margin: 0;
     padding: 3px 20px;
     white-space: nowrap;
+  }
 
+  .suggestItem {
     .icon {
       margin-right: .3em;
     }
