--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/widgets/userpicker/userPicker.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/widgets/userpicker/userPicker.css
@@ -19,6 +19,10 @@ input.suggestGroups {
      elements (we use an input with type=image here) */
   width: auto !important;
 }
+.skin-flamingo .scope {
+  /* Center the scope icon in flamingo */
+  padding: 0.6em 0.3em;
+}
 .suggestUsers.withScope, .suggestGroups.withScope {
   /* Leave space for the scope icon. Make sure this rule is applied because xforms and the object/class editors apply a
      custom border on their input elements. */
