--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/widgets/userpicker/userPicker.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/widgets/userpicker/userPicker.css
@@ -20,8 +20,9 @@ input.suggestGroups {
   width: auto !important;
 }
 .skin-flamingo .scope {
-  /* Center the scope icon in flamingo */
-  padding: 0.6em 0.3em;
+  /* Center the scope icon in flamingo.
+     Values are calculated for a 16x16 icon, an input height of 34px and a border of 25px. */
+  padding: 9px 4px;
 }
 .suggestUsers.withScope, .suggestGroups.withScope {
   /* Leave space for the scope icon. Make sure this rule is applied because xforms and the object/class editors apply a
