XWIKI-11681: When you introduce some special character into Breadcrumb-Separator you get an error in Flamingo Theme Editor.
(cherry picked from commit d0f33ada04935cbe67ce80f9aac7426d498128f4)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
@@ -169,15 +169,15 @@
       "panel-default-text" : "color",
       "breadcrumb-bg": "color",
       "breadcrumb-color": "color",
-      "breadcrumb-separator": "text"
+      "breadcrumb-separator": "escapedText"
       })
     #set($themeClass = $xwiki.getClass('FlamingoThemesCode.ThemeClass'))
     #foreach($property in $variables.keySet())
       #set($value = $themeDoc.getValue($property, $themeObj))
       #if("$!value" != '')
         #set($propertyType = $variables.get($property))
-        #if($propertyType == "text")
-          @$property: "$value";
+        #if($propertyType == 'escapedText')
+          @$property: "$escapetool.javascript($value)";
         #else
           @$property: $value;
         #end
