--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extension.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extension.vm
@@ -227,84 +227,82 @@
 
 #macro (displayExtensionDetails_description $extension)
   <div id="extension-body-description-$extensionIdHashCode"></div>
-  <div class="extension-body-description extension-body-section">
-    <dl class="extension-metadata">
-      <dt>$services.localization.render('extensions.info.id')</dt>
-      <dd>$extension.id.id</dd>
+  <dl class="extension-body-description extension-body-section">
+    <dt>$services.localization.render('extensions.info.id')</dt>
+    <dd>$extension.id.id</dd>
 
-      #if ($extension.features.size() > 0)
-        <dt>$services.localization.render('extensions.info.features', [$extension.features.size()])</dt>
-        <dd>
-        #if ($extension.features.size() == 1)
-          $escapetool.xml($extension.features.iterator().next())
+    #if ($extension.features.size() > 0)
+      <dt>$services.localization.render('extensions.info.features', [$extension.features.size()])</dt>
+      <dd>
+      #if ($extension.features.size() == 1)
+        $escapetool.xml($extension.features.iterator().next())
+      #else
+        <ul>
+          #foreach ($feature in $extension.features)
+            <li>$escapetool.xml($feature)</li>
+          #end
+        </ul>
+      #end
+      </dd>
+    #end
+
+    <dt>$services.localization.render('extensions.info.type')</dt>
+    <dd>$extension.type</dd>
+
+    <dt>$services.localization.render('extensions.info.license', [$extension.licenses.size()])</dt>
+    #if ($extension.licenses.size() > 0)
+      <dd>
+        #if ($extension.licenses.size() == 1)
+          $extension.licenses.iterator().next().name
         #else
           <ul>
-            #foreach ($feature in $extension.features)
-              <li>$escapetool.xml($feature)</li>
+            #foreach ($license in $extension.licenses)
+              <li>$license.name</li>
             #end
           </ul>
         #end
-        </dd>
+      </dd>
+    #end
+
+    #if ("$!{extension.webSite}" != '')
+      <dt>$services.localization.render('extensions.info.website')</dt>
+      <dd><a href="$extension.webSite">$escapetool.xml($extension.webSite.replaceAll('^[^/]++//([^/\?]++)[/\?]?.*+$', '$1'))</a></dd>
+    #end
+
+    #if ($extension.repository.descriptor.URI && $extension.repository.descriptor.URI.scheme != 'file')
+      <dt>$services.localization.render('extensions.info.repository')</dt>
+      <dd><a href="$extension.repository.descriptor.URI">$escapetool.xml($extension.repository.descriptor.id)</a></dd>
+    #end
+
+    #if ($extension.scm)
+      #if ($extension.scm.url)
+        <dt>$services.localization.render('extensions.info.scm')</dt>
+        <dd><a href="$extension.scm.url">$escapetool.xml($extension.scm.url.replaceAll('^[^/]++//([^/\?]++)[/\?]?.*+$', '$1'))</a></dd>
+      #elseif ($extension.scm.connection)
+        <dt>$services.localization.render('extensions.info.scm')</dt>
+        <dd><a href="$extension.scm.connection.path">$escapetool.xml($extension.scm.connection.system)</a></dd>
       #end
+    #end
 
-      <dt>$services.localization.render('extensions.info.type')</dt>
-      <dd>$extension.type</dd>
+    #if ($extension.issueManagement.getURL())
+      <dt>$services.localization.render('extensions.info.issueManagement')</dt>
+      <dd><a href="$extension.issueManagement.getURL()">$escapetool.xml($extension.issueManagement.system)</a></dd>
+    #end
 
-      <dt>$services.localization.render('extensions.info.license', [$extension.licenses.size()])</dt>
-      #if ($extension.licenses.size() > 0)
-        <dd>
-          #if ($extension.licenses.size() == 1)
-            $extension.licenses.iterator().next().name
-          #else
-            <ul>
-              #foreach ($license in $extension.licenses)
-                <li>$license.name</li>
-              #end
-            </ul>
-          #end
-        </dd>
-      #end
+    #if ($extension.isInstalled())
+      #displayExtensionDetails_description_wikis($extension)
+    #end
 
-      #if ("$!{extension.webSite}" != '')
-        <dt>$services.localization.render('extensions.info.website')</dt>
-        <dd><a href="$extension.webSite">$escapetool.xml($extension.webSite.replaceAll('^[^/]++//([^/\?]++)[/\?]?.*+$', '$1'))</a></dd>
-      #end
+    #if ($extensionStatus != 'loading')
+      #displayExtensionDetails_description_versions($extension)
+    #end
 
-      #if ($extension.repository.descriptor.URI && $extension.repository.descriptor.URI.scheme != 'file')
-        <dt>$services.localization.render('extensions.info.repository')</dt>
-        <dd><a href="$extension.repository.descriptor.URI">$escapetool.xml($extension.repository.descriptor.id)</a></dd>
-      #end
-
-      #if ($extension.scm)
-        #if ($extension.scm.url)
-          <dt>$services.localization.render('extensions.info.scm')</dt>
-          <dd><a href="$extension.scm.url">$escapetool.xml($extension.scm.url.replaceAll('^[^/]++//([^/\?]++)[/\?]?.*+$', '$1'))</a></dd>
-        #elseif ($extension.scm.connection)
-          <dt>$services.localization.render('extensions.info.scm')</dt>
-          <dd><a href="$extension.scm.connection.path">$escapetool.xml($extension.scm.connection.system)</a></dd>
-        #end
-      #end
-
-      #if ($extension.issueManagement.getURL())
-        <dt>$services.localization.render('extensions.info.issueManagement')</dt>
-        <dd><a href="$extension.issueManagement.getURL()">$escapetool.xml($extension.issueManagement.system)</a></dd>
-      #end
-
-      #if ($extension.isInstalled())
-        #displayExtensionDetails_description_wikis($extension)
-      #end
-
-      #if ($extensionStatus != 'loading')
-        #displayExtensionDetails_description_versions($extension)
-      #end
-
-      ##
-      ## TODO: need a decision on what exactly is the description and how it should be safely displayed (wiki syntax,
-      ## server side generated HTML, etc.)
-      ## <dt>Description</dt>
-      ## <dd>$!extension.description</dd>
-    </dl>
-  </div>
+    ##
+    ## TODO: need a decision on what exactly is the description and how it should be safely displayed (wiki syntax,
+    ## server side generated HTML, etc.)
+    ## <dt>Description</dt>
+    ## <dd>$!extension.description</dd>
+  </dl>
 #end
 
 #macro (displayExtensionDetails_description_wikis $extension)
@@ -411,25 +409,29 @@ $namespace##
 
 #macro (displayExtensionDetails_dependencies_upstream $extension)
   #if ($extension.dependencies.size() > 0)
-    <p>$services.localization.render('extensions.info.dependencies.directDependencies', [$extension.dependencies.size()])</p>
-    <ul class="dependencies">
-      #foreach ($dependency in $extension.dependencies)
-        <li>#displayDependency($dependency $extensionNamespace)</li>
-      #end
-    </ul>
+    <dt>$services.localization.render('extensions.info.dependencies.directDependencies', [$extension.dependencies.size()])</dt>
+    <dd>
+      <ul class="dependencies">
+        #foreach ($dependency in $extension.dependencies)
+          <li>#displayDependency($dependency $extensionNamespace)</li>
+        #end
+      </ul>
+    </dd>
   #end
 #end
 
 #macro (displayExtensionDetails_dependencies_downstream $backwardDependencies)
   #if ($backwardDependencies.size() > 0)
-    <p>$services.localization.render('extensions.info.dependencies.backwardDependencies', [$backwardDependencies.size()])</p>
-    <ul class="dependencies">
-      #foreach ($namespace in $backwardDependencies.entrySet())
-        #foreach ($dependency in $namespace.value)
-          <li>#displayDependency($dependency $namespace.key)</li>
+    <dt>$services.localization.render('extensions.info.dependencies.backwardDependencies', [$backwardDependencies.size()])</dt>
+    <dd>
+      <ul class="dependencies">
+        #foreach ($namespace in $backwardDependencies.entrySet())
+          #foreach ($dependency in $namespace.value)
+            <li>#displayDependency($dependency $namespace.key)</li>
+          #end
         #end
-      #end
-    </ul>
+      </ul>
+    </dd>
   #end
 #end
 
@@ -437,10 +439,10 @@ $namespace##
   #if ($extension.dependencies.size() > 0 || $backwardDependencies.size() > 0)
     <div id="extension-body-dependencies-$extensionIdHashCode"></div>
     #computeXBack()
-    <div class="extension-body-dependencies extension-body-section">
+    <dl class="extension-body-dependencies extension-body-section">
       #displayExtensionDetails_dependencies_upstream($extension)
       #displayExtensionDetails_dependencies_downstream($backwardDependencies)
-    </div>
+    </dl>
   #end
 #end
 
