XWIKI-10027: Show date and time of the install and user who installed for an installed extension * Improve the CSS

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/extension/extension.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/extension/extension.css
@@ -131,7 +131,8 @@ dl.extension-body-section > dt {
   color: $theme.textSecondaryColor;
   font-weight: normal;
 }
-dl.extension-body-section > dd + dt {
+dl.extension-body-section > dd + dt,
+dl.extension-body-section > dt + dt {
   margin-top: .7em;
 }
 
