[misc] Try to determine why the extension tests fail randomly with "We couldn't find any extension with id ...".

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extension.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/extension.vm
@@ -884,6 +884,15 @@ $namespace##
       <div class="infomessage">$services.localization.render('extensions.advancedSearch.noResults',
         ["<strong>$!escapetool.xml($request.extensionId)</strong>",
         "<strong>$!escapetool.xml($request.extensionVersion)</strong>"])</div>
+
+      ## DEBUG START: Check if there is any job status associated with the specified extension.
+      #getExtensionJobStatus($request.extensionId, $request.extensionVersion $jobStatus)
+      #if ($jobStatus)
+        ## Normally we shouldn't get here.
+        <div class="errormessage">We found an extension job associated with the missing extension:</div>
+        #displayExtensionJobStatus($jobStatus)
+      #end
+      ## DEBUG STOP
     #end
   #end
 #end
