XWIKI-11234: Do not display a very long title in the wiki's header
- Adding ellipsis

(cherry picked from commit 2ff46284a2226a8b6d965635dafc0dcaddc750db)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/action-menus.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/action-menus.less
@@ -96,9 +96,14 @@
        * where the menu is displayed vertically) and the other has the caret for larger screens (where the menu is
        * displayed horizontally).
        */
-      display: inline-block;
+      float: left;
     }
     > .dropdown-split-left {
+      /* When the page name is long, add ellipsis. */
+      max-width: 10em;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
       /* Display it closer to the menu toggle. */
       padding-right: ceil(@navbar-padding-horizontal / 2);
       > .caret {
