XWIKI-11234: Do not display a very long title in the wiki's header
- Also handle the case when we create the page, so the menu entry doesn't have a dropdown yet
- Display the ellipsis just for large views, since in mobile view the menu entries are one on top of another

(cherry picked from commit fcd0ce9a1dee165838c8fad203dfca052790b216)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/action-menus.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/action-menus.less
@@ -49,6 +49,16 @@
   .text-right();
 }
 
+@media (min-width: @screen-sm-min) {
+  .navbar-nav > li > a {
+    /* When the page name is long, add ellipsis. */
+    max-width: 10em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+}
+
 // Navbar avatar ==========================================================
 
 .navbar-avatar {
@@ -99,11 +109,6 @@
       float: left;
     }
     > .dropdown-split-left {
-      /* When the page name is long, add ellipsis. */
-      max-width: 10em;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
       /* Display it closer to the menu toggle. */
       padding-right: ceil(@navbar-padding-horizontal / 2);
       > .caret {
