XWIKI-11926: Improve the document diff UI in order to reuse it to show the differences between multiple documents * Use a non-breaking space at the start of context (unmodified) lines so that they are correctly aligned even when spaces are not preserved (because we want the lines to wrap).

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/diff_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/diff_macros.vm
@@ -24,7 +24,7 @@
 #end
 
 #macro (unifiedDiffLine $line)
-${line.type.symbol}##
+#if($line.type.symbol == ' ')&nbsp;#else$line.type.symbol#end##
 #if ($line.chunks)##
 #inlineDiffLine($line.chunks)##
 #else##
